--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,10 +18,20 @@
           background-color: #ffd659;
         }
     </style>
+    <style>
+      @media screen and (max-width:600px) /*for small screen like mobile*/
+      {
+        .card { font-size: 0.7em; },
+      }
+      @media screen and (min-width:600px) /*for big screen like PC*/
+      {
+        .card { font-size: 1em; },
+      }
+    </style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Tell the browser to be responsive to screen width -->
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Font Awesome -->
@@ -151,7 +161,7 @@
             System of organization and accounting of excursions in <b>JINR</b>
           </h1>
         </section>
-        <div class="content">
+        <div class="content container-fluid">
           {% block content %}
             {% endblock %}
         </div>
