--- a/app/templates/excursion_form.html
+++ b/app/templates/excursion_form.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
-{% load tz %}
 {% block content %}
+{% load tz %}
 
 <section class="content-header">
   <h4><i class="fas fa-edit"></i> <b>Send a new request for the organization of excursion</b></h4>
 </section>
 
-<form id="application_form" action="send_blank/" method="post" class="card">
+<form id="application_form" action="send_blank/" method="post" class="card" style="padding-left: 1%; padding-right: 1%;">
 	{% csrf_token %}
 	<div class="row">
 		<div class="col">
