Adaptive layout of the mobile version work has started

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,23 @@
     <style>
       @media screen and (max-width:600px) /*for small screen like mobile*/
       {
-        .card { font-size: 0.7em; },
+        body {line-height: 1 !important; }
+        label { font-size: 0.9em !important; }
+        h1 { font-size: 0.9em !important; }
+        h2, h3, h4, h5, h6 { font-size: 0.7em !important; }
+        a > span, h5 > span, th > span, .panel > h3 { font-size: 1em !important; }
+        .content { padding: 0px !important; font-size: 0.9em !important; }
+        .card { font-size: 0.7em !important; }
+        .btn { font-size: 0.8em !important; }
+        p { font-size: 0.7em !important; }
+        li > b, li > a { font-size: 0.7em !important; }
+        .card-body { padding: 1% !important; }
+        .btn-sm { width: auto !important; }
+        span { font-size: 0.7em !important; }
+        select, input{ padding: 0px !important; font-size: 0.7em !important; }
+        option { padding-bottom: 0px !important; }
+        .row { display: block !important; }
+        .popover-content, .clockpicker-canvas { font-size: 0.7em !important; }
       }
       @media screen and (min-width:600px) /*for big screen like PC*/
       {
