Added Guide Statistics page and created view_guide_statistics function in views.py

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -156,6 +156,7 @@
                 <ul class="treeview-menu">
                   <li><a href="{% url 'app:view_facilities_attendace' %}">Facilities attendance</a></li>
                   <li><a href="{% url 'app:view_areas_attendace' %}">Areas attendance</a></li>
+                  <li><a href="{% url 'app:view_guide_statistics' %}">Guide statistics</a></li>
                 </ul>
               </li>
                 <li class="header">ACTIONS</li>
