Changes: 1) Added Calendar page 2) Removed duplications in view_guide_statistics 3) JSON objects are returned from view_guide_statistics

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -147,6 +147,7 @@
                 <!-- Optionally, you can add icons to the links -->
                 <li><a href="{% url 'app:get_excursion_form' %}"><i class="fa fa-edit"></i> <span>Apply an application</span></a></li>
                 <li><a href="{% url 'app:view_excursions' %}"><i class="fa fa-calendar-alt"></i> <span>View all applications</span></a></li>
+                <li><a href="{% url 'app:view_calendar' %}"><i class="fa fa-calendar-alt"></i> <span>Calendar</span></a></li>
               <li class="treeview">
                 <a href="#"><i class="fa fa-chart-pie"></i><span>Charts</span>
                   <span class="pull-right-container">
